--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=trace
 
-server.servlet.context-path=/products-crud-rest
+#server.servlet.context-path=/products-crud-rest
 
 
